--- a/pom.xml
+++ b/pom.xml
@@ -26,18 +26,18 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-				<!--<dependencies>-->
-					<!--<dependency>-->
-						<!--<groupId>org.codehaus.groovy</groupId>-->
-						<!--<artifactId>groovy-eclipse-compiler</artifactId>-->
-						<!--<version>2.9.1-01</version>-->
-					<!--</dependency>-->
-					<!--<dependency>-->
-						<!--<groupId>org.codehaus.groovy</groupId>-->
-						<!--<artifactId>groovy-eclipse-batch</artifactId>-->
-						<!--<version>2.3.7-01</version>-->
-					<!--</dependency>-->
-				<!--</dependencies>-->
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.groovy</groupId>
+						<artifactId>groovy-eclipse-compiler</artifactId>
+						<version>2.9.1-01</version>
+					</dependency>
+					<dependency>
+						<groupId>org.codehaus.groovy</groupId>
+						<artifactId>groovy-eclipse-batch</artifactId>
+						<version>2.3.7-01</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.gmavenplus</groupId>
