--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.co.silentsoftware</groupId>
 	<artifactId>imagetozxspec</artifactId>
-	<version>2.0.2</version>
+	<version>2.1.0-alpha</version>
 	<name>Image To ZX Spec</name>
 	<description>Image converter for the ZX Spectrum</description>
 	<licenses>
