--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.co.silentsoftware</groupId>
     <artifactId>imagetozxspec</artifactId>
-    <version>2.2.2</version>
+    <version>2.3.0</version>
     <name>Image To ZX Spec</name>
     <description>Image converter for the ZX Spectrum</description>
     <licenses>
@@ -43,7 +43,7 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.13.1</version>
+                <version>3.0.2</version>
                 <executions>
                     <execution>
                         <goals>
@@ -254,13 +254,15 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.groovy/groovy-all -->
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>3.0.10</version>
+            <version>4.0.15</version>
             <type>pom</type>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
 
